--- a/index_files/responsive.css
+++ b/index_files/responsive.css
@@ -648,7 +648,7 @@
         padding: 50px 20px;
     }
     .banner-section.s1 {
-        background-position: right bottom;
+        background-position: left bottom;
     }
     .f-item {
         margin-left: 0;
