--- a/stylesheet/responsive.css
+++ b/stylesheet/responsive.css
@@ -542,7 +542,7 @@
     .modal-content-footer {
         display: block;
     }
-    .experienced.s3 .background-inner.bg-s1, {
+    .experienced.s3 .background-inner.bg-s1 {
         margin-bottom: 100px;
     }
     .get-project.s4 {
@@ -575,8 +575,8 @@
     .banner-section.two-home {
         padding: 170px 0px 150px;
     }
-
 }
+
 /* Tablet Landscape */
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
 
@@ -783,4 +783,4 @@
     .flat-title .sub-title:after {
         display: none;
     }
-}   
+}
