--- a/index_files/style.css
+++ b/index_files/style.css
@@ -1126,7 +1126,7 @@ body.slide-menu-dark .header #mainnav .menu li a:hover {
     border-bottom-left-radius: 105px;
 }
 .banner-section.s1 {
-    padding: 100px 0 452px;
+    padding: 100px 0px 150px;
     background-image: url(../images/section/landing2.png);
     background-position: center;
     background-size: cover;
