--- a/index_files/style.css
+++ b/index_files/style.css
@@ -1236,7 +1236,7 @@ body.slide-menu-dark .header #mainnav .menu li a:hover {
         padding: 0rem 0 -50rem !important;
     }
     .banner-section .content-text p {
-        font-size: 0.8rem;
+        font-size: 0.9rem;
         line-height: 1.2rem;
     } 
     .banner-section .content-text .title {
@@ -1284,6 +1284,7 @@ body.slide-menu-dark .header #mainnav .menu li a:hover {
     .container {
         max-width: 0;
     }
+    
 }
 
 @media only screen and (max-width: 760px) {
@@ -1303,6 +1304,11 @@ body.slide-menu-dark .header #mainnav .menu li a:hover {
         line-height: 1.2rem;
     } 
 
+}
+.banner-section.s1 .content-text .fl-btn a {
+    padding: 11px 30px 10px 30px;
+    background: rgb(251,189,65);
+    background: linear-gradient(-135deg, rgba(163,69,251,1) 0%, rgba(251,189,65,1) 100%);
 }
 
 @media only screen and (max-width: 570px) {
@@ -1353,11 +1359,7 @@ body.slide-menu-dark .header #mainnav .menu li a:hover {
 .banner-section.s1 .content-text .title span b {
     font-weight: normal;
 }
-/* .banner-section.s1 .content-text .fl-btn a {
-    padding: 20px 35px 18px 35px;
-    background: rgb(251,189,65);
-    background: linear-gradient(-135deg, rgba(163,69,251,1) 0%, rgba(251,189,65,1) 100%);
-} */
+
 .banner-section.s2 {
     background-color: #fbbd41;
     border-bottom-left-radius: 120px;
